# qa_guru_poetry

./: pyproject.toml
