[tool.poetry]
name = "my-first-poetry"
version = "0.1.0"
description = ""
authors = ["juliacich100 <juliacich100@gmail.com>"]
readme = "README.md"
packages = [{include = "my_first_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^2.0.0b17", allow-prereleases = true}
pytest = "^7.1.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
